--- a/src/sales/templates/sales/main.html
+++ b/src/sales/templates/sales/main.html
@@ -1,9 +1,20 @@
 {% extends "base.html" %}
 
 {% block title %}
-home
+Sales list
 {% endblock title %}
 
+
 {% block content %}
-hello world
+<h1>Sales List</h1>
+
+<ul>
+  {% for sale in sales_list %}
+    <li>
+      <a href='{{sale.get_absolute_url}}'>{{sale}}</a>
+    </li>
+  {% endfor %}
+</ul>
+
+
 {% endblock content %}
