--- a/src/sales/templates/sales/home.html
+++ b/src/sales/templates/sales/home.html
@@ -1,9 +1,21 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}
 home
 {% endblock title %}
 
 {% block content %}
-hello world
+
+<h1>Search for reports</h1>
+
+<hr />
+
+<form action='' method='POST'>
+  {% csrf_token %}
+  {{form | crispy}}
+  <button class='btn btn-primary mt-3'>Search</button>
+</form>
+
+
 {% endblock content %}
