--- a/src/sales/templates/sales/home.html
+++ b/src/sales/templates/sales/home.html
@@ -16,18 +16,18 @@ home
 
 <div class="modal fade" id="ReportModal" tabindex="-1" aria-labelledby="ReportModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <form class="modal-content">
+    <form class="modal-content" id='report-form'>
       <div class="modal-header">
         <h5 class="modal-title" id="ReportModalLabel">Generate Report</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
+      
       <div class="modal-body" id='report-modal'>
-        <div class='alert d-none' id='report-alert'></div>
-
         {% csrf_token %}
         {{ report_form | crispy }}
-
       </div>
+
+      <div id='report-alert'></div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="submit" class="btn btn-primary">Save changes</button>
